--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -1,37 +1,5 @@
-/*!* src/Chat.css *!*/
-/*.chat-list {*/
-/*  max-height: 100%;*/
-/*  overflow-y: scroll;*/
-/*  margin-bottom: 1rem;*/
-/*}*/
-
-/*.chat-bubble {*/
-/*  display: flex;*/
-/*  margin-bottom: 10px;*/
-/*  padding: 10px;*/
-/*  border-radius: 20px;*/
-/*  max-width: 80%;*/
-/*}*/
-
-/*.user {*/
-/*  background-color: #007aff;*/
-/*  color: white;*/
-/*  margin-left: auto;*/
-/*  text-align: right;*/
-/*border-top-right-radius: 0;*/
-/*}*/
-
-/*.other {*/
-/*background-color: #e5e5ea;*/
-/*color: black;*/
-/*margin-right: auto;*/
-/*text-align: left;*/
-/*border-top-left-radius: 0;*/
-/*}*/
-
+/*//* src/Chat.css *//*/
 /*///////////////////////////////////*/
-
-
 
 /* Chat.css */
 .chat-list {
